--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -20,16 +20,6 @@
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/dennis/.m2/repository/edu/uci/ics/crawler4j/3.5/crawler4j-3.5.jar" sourcepath="/home/dennis/.m2/repository/edu/uci/ics/crawler4j/3.5/crawler4j-3.5-sources.jar">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="javadoc_location" value="jar:file:/home/dennis/.m2/repository/edu/uci/ics/crawler4j/3.5/crawler4j-3.5-javadoc.jar!/"/>
-			<attribute name="maven.groupId" value="edu.uci.ics"/>
-			<attribute name="maven.artifactId" value="crawler4j"/>
-			<attribute name="maven.version" value="3.5"/>
-			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
